SERVER-20212 Forget connections to a replica set after it has been shut down

Adds a hook to the Mongo object to tell the ReplicaSetMonitorManager to
stop monitoring a set, which is called in ReplSetTest.stopSet()